- CallTargetForModules#setModuleProperty() overrides properties defined by #createParam().
- CallTargetForModules#addConfigured(ModuleLoader) throws NullPointerException if null module loader is passed.
- ModuleUtil#normalisePath(String, File) is added to support ModuleLoader#normalisePath(String).

0.4.0
-----
Bug fixes:
- GetModuleAttribute, GetModuleClasspath, GetModulePath: if an output property is defined then it is not replaced with the value generated by the task.
- CallTargetForModules: a single param is created to set the module to call the target for.
- ManifestModuleLoader reads classpath attributes and dependencies as URLs, not URIs.
- ManifestModuleLoader: a usage of Ant 1.7-specific API is replaced with Ant 1.6-compatible functionality.
- ManifestModuleLoader: ModuleNotLoadedException is thrown instead of a RuntimeException if a malformed URL element is present in a module manifest.
- GetModuleClasspath supports now nested <sourceAttribute> elements.

API changes:
- Module and ModuleInfo are made final classes.
- Module is made thread-safe for the clients.
- Module#addDependency and Module#setDependencies visibility is reduced from 'public' to 'package'.
- CallTargetForModules: the attribute 'threadCount' is added to define a number of threads which are to execute targets for independent modules.
- CallTargetForModules: the API of the element 'param' is limited to the API of the Property type of Ant 1.6.
- CallTargetForModules: at least one <module> element is required now.
- CallTargetForModules: the attribute 'target' is added to the element <module> to support module-specific targets invoked by CallTargetForModules.

Other:
- API documentation is expanded.
- The worst-case performance of SerialDependencyResolver is improved (was: O(n^4), now: O(n^3)).
- Error messages that report about an build failure in a module target now displayed with the module path.